// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HvCheckBox sample snapshot testing ErrorMessage 1`] = `
<div>
  <div
    class="HvCheckBox-root HvFormElement-root"
  >
    <div
      class="HvCheckBox-container HvCheckBox-invalidContainer"
    >
      <span
        class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorDefault PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorDefault HvCheckBox-checkbox HvCheckBox-invalidCheckbox HvBaseCheckbox-root css-balhlm-MuiButtonBase-root-MuiCheckbox-root"
      >
        <input
          aria-errormessage="hvcheckbox7-error"
          aria-invalid="true"
          class="PrivateSwitchBase-input css-1m9pwf3"
          data-indeterminate="false"
          id="hvcheckbox7-input"
          type="checkbox"
          value="on"
        />
        <div
          class="HvIconBase-root HvIconBase-s"
          font-size="medium"
          name="Checkbox"
        >
          <svg
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="color0"
              d="M0 0h16v16H0z"
              fill="#FBFCFC"
            />
            <path
              class="color1"
              d="M16 16H0V0h16zM1 15h14V1H1z"
              fill="#414141"
            />
          </svg>
        </div>
      </span>
      <label
        class="HvCheckBox-label HvLabel-root HvTypography-root HvTypography-highlightText"
        for="hvcheckbox7-input"
        id="hvcheckbox7-label"
      >
        Checkbox 1
      </label>
    </div>
    <div
      class="HvWarningText-root HvWarningText-show"
    >
      <div
        class="HvWarningText-defaultIcon HvIconBase-root HvIconBase-s"
        name="Fail"
      >
        <svg
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="color0"
            d="M7.5 4.001h1v6h-1zm0 8h1v-1h-1zM16 8a8 8 0 10-8 8 8 8 0 008-8zm-1 0a7 7 0 11-7-7 7 7 0 017 7z"
            fill="#C62828"
          />
        </svg>
      </div>
      <p
        aria-atomic="true"
        aria-live="polite"
        aria-relevant="additions text"
        class="HvWarningText-warningText HvWarningText-topGutter HvTypography-root HvTypography-normalText"
        id="hvcheckbox7-error"
      >
        No way for this to be valid!
      </p>
    </div>
  </div>
</div>
`;

exports[`HvCheckBox sample snapshot testing Main 1`] = `
<div>
  <div
    class="HvCheckBox-root HvFormElement-root"
  >
    <div
      class="HvCheckBox-container"
    >
      <span
        class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorDefault PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorDefault HvCheckBox-checkbox HvBaseCheckbox-root css-balhlm-MuiButtonBase-root-MuiCheckbox-root"
      >
        <input
          class="PrivateSwitchBase-input css-1m9pwf3"
          data-indeterminate="false"
          id="hvcheckbox1-input"
          type="checkbox"
          value="on"
        />
        <div
          class="HvIconBase-root HvIconBase-s"
          font-size="medium"
          name="Checkbox"
        >
          <svg
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="color0"
              d="M0 0h16v16H0z"
              fill="#FBFCFC"
            />
            <path
              class="color1"
              d="M16 16H0V0h16zM1 15h14V1H1z"
              fill="#414141"
            />
          </svg>
        </div>
      </span>
      <label
        class="HvCheckBox-label HvLabel-root HvTypography-root HvTypography-highlightText"
        for="hvcheckbox1-input"
        id="hvcheckbox1-label"
      >
        Checkbox 1
      </label>
    </div>
  </div>
  <div
    class="HvCheckBox-root HvFormElement-root"
  >
    <div
      class="HvCheckBox-container"
    >
      <span
        class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorDefault PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorDefault Mui-checked HvCheckBox-checkbox HvBaseCheckbox-root css-balhlm-MuiButtonBase-root-MuiCheckbox-root"
      >
        <input
          checked=""
          class="PrivateSwitchBase-input css-1m9pwf3"
          data-indeterminate="false"
          id="hvcheckbox3-input"
          type="checkbox"
          value="on"
        />
        <div
          class="HvIconBase-root HvIconBase-s"
          font-size="medium"
          name="CheckboxCheck"
        >
          <svg
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="color0"
              d="M0 0h16v16H0z"
              fill="#414141"
            />
            <path
              class="color0"
              d="M16 16H0V0h16zM1 15h14V1H1z"
              fill="#414141"
            />
            <path
              class="color1"
              d="M6.049 12.463L2.293 8.707l1.414-1.414 2.244 2.244 6.3-7.2 1.506 1.317z"
              fill="#FBFCFC"
            />
          </svg>
        </div>
      </span>
      <label
        class="HvCheckBox-label HvLabel-root HvTypography-root HvTypography-highlightText"
        for="hvcheckbox3-input"
        id="hvcheckbox3-label"
      >
        Checkbox 2
      </label>
    </div>
  </div>
  <div
    class="HvCheckBox-root HvFormElement-root"
  >
    <div
      class="HvCheckBox-container"
    >
      <span
        class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-indeterminate MuiCheckbox-colorDefault PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-indeterminate MuiCheckbox-colorDefault HvCheckBox-checkbox HvBaseCheckbox-root css-balhlm-MuiButtonBase-root-MuiCheckbox-root"
      >
        <input
          class="PrivateSwitchBase-input css-1m9pwf3"
          data-indeterminate="true"
          id="hvcheckbox5-input"
          type="checkbox"
          value="on"
        />
        <div
          class="HvIconBase-root HvIconBase-s"
          font-size="medium"
          name="CheckboxPartial"
        >
          <svg
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="color0"
              d="M0 0h16v16H0z"
              fill="#FBFCFC"
            />
            <path
              class="color1"
              d="M16 16H0V0h16zM1 15h14V1H1zm3-6h8V7H4z"
              fill="#414141"
            />
          </svg>
        </div>
      </span>
      <label
        class="HvCheckBox-label HvLabel-root HvTypography-root HvTypography-highlightText"
        for="hvcheckbox5-input"
        id="hvcheckbox5-label"
      >
        Checkbox 3
      </label>
    </div>
  </div>
</div>
`;
